--- a/src/Contact.css
+++ b/src/Contact.css
@@ -77,7 +77,7 @@ button[type="submit"]:hover {
 }
 
 button[type="submit"] {
-  margin: auto 3% 50px
+  margin: auto 3% 50px;
 }
 
 
