--- a/src/Footer.css
+++ b/src/Footer.css
@@ -75,4 +75,8 @@
     .footer p{
         margin-bottom: 10px;
     }
+
+    .footer{
+        margin-bottom: 20px;
+    }
 }
